# src/docs/openapi.json
@@ -172,6 +172,26 @@
 						"JWT": []
 					}
 				],
+				"parameters": [
+					{
+						"name": "page",
+						"in": "query",
+						"schema": {
+							"type": "integer",
+							"minimum": 1,
+							"default": 1
+						}
+					},
+					{
+						"name": "limit",
+						"in": "query",
+						"schema": {
+							"type": "integer",
+							"minimum": 1,
+							"default": 20
+						}
+					}
+				],
 				"responses": {
 					"200": {
 						"description": "Listed",
@@ -185,6 +205,10 @@
 										{
 											"type": "object",
 											"properties": {
+												"total": {
+													"type": "integer",
+													"example": 42
+												},
 												"result": {
 													"type": "array",
 													"items": {
